--- a/new.css
+++ b/new.css
@@ -5,7 +5,7 @@
     
 }
 body{
-    width: 100%;
+    width: 375px;
     border: 1px solid white;  
     box-sizing: border-box;
 }
@@ -176,17 +176,17 @@ h2{
     cursor: pointer;
 }
 .container{
-    width: 70%;
-    margin-left: 50px;
-    margin-top: 90px;
-    height: 70vh;
+   width: 350px;
+    margin-left: 10px;
+    margin-top: 50px;
+    height: 30vh;
 }
 .swiper{
-    width: 100%;
-    height: fit-content;
+    width: 350px;
+   height: 30vh;
 }
 .swiper-slide img{
-    width:100%;
+    width:250px;
 }
 .first-images{
     width: 100px;
